[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/RoofWaterFront.gd" type="Script" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.208738, 0.33657, 0.694175, 1 )
colors = PoolColorArray( 0.931717, 0.977539, 0.971901, 1, 0.78923, 0.798895, 0.801758, 1, 0.895805, 0.99707, 0.994104, 1, 0.673878, 0.707219, 0.71582, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0737629, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
trail_divisor = 12
trail_size_modifier = SubResource( 7 )
emission_shape = 2
emission_box_extents = Vector3( 39, 14, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 16.0
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
damping = 22.42
scale_random = 1.0
color = Color( 0.54902, 0.796078, 0.956863, 0.792157 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=9]
trail_divisor = 12
trail_size_modifier = SubResource( 7 )
emission_shape = 2
emission_box_extents = Vector3( 39, 14, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 16.0
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
damping = 22.42
scale_random = 1.0
color = Color( 0.54902, 0.796078, 0.956863, 0.792157 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=10]
trail_divisor = 12
trail_size_modifier = SubResource( 7 )
emission_shape = 2
emission_box_extents = Vector3( 39, 14, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 16.0
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
damping = 22.42
scale_random = 1.0
color = Color( 0.54902, 0.796078, 0.956863, 0.792157 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=11]
trail_divisor = 12
trail_size_modifier = SubResource( 7 )
emission_shape = 2
emission_box_extents = Vector3( 39, 14, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 16.0
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
damping = 22.42
scale_random = 1.0
color = Color( 0.54902, 0.796078, 0.956863, 0.792157 )
color_ramp = SubResource( 3 )

[node name="RoofWaterFront" type="Control"]
margin_left = 1.0
margin_top = -12.0
margin_right = 79.0
margin_bottom = 16.0
rect_clip_content = true
script = ExtResource( 1 )

[node name="Particles2DLight" type="Particles2D" parent="."]
visible = false
position = Vector2( 39, 14 )
emitting = false
explosiveness = 0.4
process_material = SubResource( 8 )

[node name="Particles2DNormal" type="Particles2D" parent="."]
visible = false
position = Vector2( 39, 14 )
emitting = false
amount = 48
speed_scale = 0.8
process_material = SubResource( 9 )

[node name="Particles2DHeavy" type="Particles2D" parent="."]
visible = false
position = Vector2( 39, 14 )
emitting = false
amount = 512
speed_scale = 0.8
process_material = SubResource( 10 )

[node name="Particles2DTorrential" type="Particles2D" parent="."]
visible = false
position = Vector2( 39, 14 )
emitting = false
amount = 2040
speed_scale = 0.8
process_material = SubResource( 11 )
